// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchSQLInstances encrypted should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:43.324630550Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478343324,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "location": "global",
      "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "example-topic-keyring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/global/example-topic-keyring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:42.998855757Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342998,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "example-keyring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/example-keyring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:43.452796640Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478343452,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v3-bucket-ring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:42.750605992Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342750,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-disk-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v3-disk-bucket-ring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:42.389137569Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342389,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "location": "us-central1",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us-central1/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:54.427526595Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-05-31T16:25:54.427526595Z",
              "generateTime": "2021-05-31T16:25:54.427526595Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478354427,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "nextRotationTime": undefined,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1622478354427,
      "primaryGenerateTime": 1622478354427,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": undefined,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/global/example-topic-keyring/projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:53.130589171Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-05-31T16:25:53.130589171Z",
              "generateTime": "2021-05-31T16:25:53.130589171Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key/cryptoKeyVersions/1",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478353130,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "nextRotationTime": undefined,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1622478353130,
      "primaryGenerateTime": 1622478353130,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key/cryptoKeyVersions/1",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": undefined,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/example-keyring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:54.506981906Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
            "nextRotationTime": "2021-06-05T16:25:59.782224Z",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-06-04T16:25:58.782224865Z",
              "generateTime": "2021-06-04T16:25:58.782224865Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key/cryptoKeyVersions/5",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478354506,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "nextRotationTime": 1622910359782,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1622823958782,
      "primaryGenerateTime": 1622823958782,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key/cryptoKeyVersions/5",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/j1-gc-integration-dev-v3-bucket-ring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:52.740906673Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
            "nextRotationTime": "2021-06-05T16:25:58.009717Z",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-06-04T16:25:57.009717461Z",
              "generateTime": "2021-06-04T16:25:57.009717461Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key/cryptoKeyVersions/5",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478352740,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "nextRotationTime": 1622910358009,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1622823957009,
      "primaryGenerateTime": 1622823957009,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key/cryptoKeyVersions/5",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/j1-gc-integration-dev-v3-disk-bucket-ring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:43.794005568Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
            "nextRotationTime": "2021-06-05T16:25:49.064059Z",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-06-04T16:25:48.064059474Z",
              "generateTime": "2021-06-04T16:25:48.064059474Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key/cryptoKeyVersions/5",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478343794,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "nextRotationTime": 1622910349064,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1622823948064,
      "primaryGenerateTime": 1622823948064,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key/cryptoKeyVersions/5",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us-central1/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "projects/167984947943",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T15:15:56.125Z",
            "displayName": "j1-gc-integration-dev-v3",
            "etag": "6nNZKrLueq5A5QHM92fcDg==",
            "name": "projects/167984947943",
            "parent": "folders/306329820365",
            "projectId": "j1-gc-integration-dev-v3",
            "state": "ACTIVE",
            "updateTime": "2021-05-31T15:15:58.148Z",
          },
        },
      ],
      "_type": "google_cloud_project",
      "createdOn": 1622474156125,
      "displayName": "j1-gc-integration-dev-v3",
      "id": "j1-gc-integration-dev-v3",
      "lifecycleState": "ACTIVE",
      "name": "projects/167984947943",
      "parent": "folders/306329820365",
      "projectId": "j1-gc-integration-dev-v3",
      "updatedOn": 1622474158148,
      "webLink": "https://console.cloud.google.com/home/dashboard?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Database",
      ],
      "_key": "j1-gc-integration-dev-v3:us-central1:test-instance-delete-soon",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "backendType": "SECOND_GEN",
            "connectionName": "j1-gc-integration-dev-v3:us-central1:test-instance-delete-soon",
            "databaseVersion": "POSTGRES_13",
            "etag": "fbeba6872568e35a2bf3ae908e099edf735f4feecb41b57cb659334b3e6070fe",
            "gceZone": "us-central1-f",
            "instanceType": "CLOUD_SQL_INSTANCE",
            "ipAddresses": Array [
              Object {
                "ipAddress": "34.134.130.68",
                "type": "PRIMARY",
              },
              Object {
                "ipAddress": "34.121.255.142",
                "type": "OUTGOING",
              },
            ],
            "kind": "sql#instance",
            "name": "test-instance-delete-soon",
            "project": "j1-gc-integration-dev-v3",
            "region": "us-central1",
            "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/test-instance-delete-soon",
            "serverCaCert": Object {
              "cert": "-----BEGIN CERTIFICATE-----
MIIDfzCCAmegAwIBAgIBADANBgkqhkiG9w0BAQsFADB3MS0wKwYDVQQuEyQzNjg5
ZmEzYS0zYWMzLTRmMGMtOWJjMS0zNjFhODYzMjNmZDYxIzAhBgNVBAMTGkdvb2ds
ZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUsIEluYzELMAkG
A1UEBhMCVVMwHhcNMjEwNTMxMTY0NDI4WhcNMzEwNTI5MTY0NTI4WjB3MS0wKwYD
VQQuEyQzNjg5ZmEzYS0zYWMzLTRmMGMtOWJjMS0zNjFhODYzMjNmZDYxIzAhBgNV
BAMTGkdvb2dsZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUs
IEluYzELMAkGA1UEBhMCVVMwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIB
AQDaSFrVVfEDVLbxb33pxPhFw6BiSKP6/ejP32qZc5AlriBQX80Vh5JHNZGb2CLD
Ax/pD7sFPyp4AaSz7XD+igU/Z+mE+zYxFq2h3jWzB8OtS9MWhaIU/ZqoYHLGJRMe
aQuDQvT+2I1R8czsQNPSykwgsD74lYv21zlQVgxj8zdl22MoGN+DYgHs3e5DV2V8
JJ6t1K8JpWG+PP4fZWej5JdnKXPQ4SgYkH51g/37ZzqmkS8fUIraFVzuU+QyaSm4
cquSZvskV6cpT6sc2aXvG5Omy8rPIuA5UgzCB+JdG8QoaRpbKOfX4NS9njtVcbHJ
3UnhpRCYDIg8RV1pXIPFkokbAgMBAAGjFjAUMBIGA1UdEwEB/wQIMAYBAf8CAQAw
DQYJKoZIhvcNAQELBQADggEBADvNQYXhPBUKwA9OUOY43vbq9/lK0xBXL9H4QVgB
nqKPeYwQ1fgZEy5mYLydq/uYoJpgEexOvo8RnzkI9q+/qt9XuNz1wvBJcBWtCq9+
BGchr0u4uFHUDnAbHDIhQVffUNhzvKrkkpBvWNTWhr7jas8C+IKQmiDug2WbN8N0
Uzn5gw3TTugaU+FqZUM4DFBUkIAXApZKppdc/5A89Mg3No6k5enhPNeT4mAdGAEi
wrRRXXzpBh9Oz8wBFtiw9tk0l28zx8HSfD3jwzFKst1UXcHuMwglilrpJgfw9bP/
aCQCewmcw/urdZEKbY9HW93EGgwWF7ywAUNDEvQ3t4OqNWc=
-----END CERTIFICATE-----",
              "certSerialNumber": "0",
              "commonName": "C=US,O=Google\\\\, Inc,CN=Google Cloud SQL Server CA,dnQualifier=3689fa3a-3ac3-4f0c-9bc1-361a86323fd6",
              "createTime": "2021-05-31T16:44:28.715Z",
              "expirationTime": "2031-05-29T16:45:28.715Z",
              "instance": "test-instance-delete-soon",
              "kind": "sql#sslCert",
              "sha1Fingerprint": "ecc6c499157ef07596bba110c602490ff80c5cbb",
            },
            "serviceAccountEmailAddress": "p167984947943-wcfyii@gcp-sa-cloud-sql.iam.gserviceaccount.com",
            "settings": Object {
              "activationPolicy": "ALWAYS",
              "authorizedGaeApplications": Array [],
              "availabilityType": "ZONAL",
              "backupConfiguration": Object {
                "backupRetentionSettings": Object {
                  "retainedBackups": 7,
                  "retentionUnit": "COUNT",
                },
                "enabled": false,
                "kind": "sql#backupConfiguration",
                "location": "us",
                "pointInTimeRecoveryEnabled": false,
                "replicationLogArchivingEnabled": false,
                "startTime": "21:00",
                "transactionLogRetentionDays": 7,
              },
              "dataDiskSizeGb": "10",
              "dataDiskType": "PD_SSD",
              "ipConfiguration": Object {
                "authorizedNetworks": Array [],
                "ipv4Enabled": true,
              },
              "kind": "sql#settings",
              "locationPreference": Object {
                "kind": "sql#locationPreference",
                "zone": "us-central1-f",
              },
              "maintenanceWindow": Object {
                "day": 0,
                "hour": 0,
                "kind": "sql#maintenanceWindow",
              },
              "pricingPlan": "PER_USE",
              "replicationType": "SYNCHRONOUS",
              "settingsVersion": "1",
              "storageAutoResize": true,
              "storageAutoResizeLimit": "0",
              "tier": "db-custom-4-26624",
            },
            "state": "RUNNABLE",
          },
        },
      ],
      "_type": "google_sql_postgres_instance",
      "authorizedNetworks": Array [],
      "automatedBackupsEnabled": false,
      "createdOn": undefined,
      "displayName": "test-instance-delete-soon",
      "encrypted": true,
      "hasPublicIP": true,
      "kmsKeyName": undefined,
      "location": "j1-gc-integration-dev-v3:us-central1:test-instance-delete-soon",
      "logCheckpoints": undefined,
      "logConnections": undefined,
      "logDisconnections": undefined,
      "logLockWaits": undefined,
      "logMinDurationStatement": undefined,
      "logMinErrorStatement": undefined,
      "logTempFiles": undefined,
      "name": "test-instance-delete-soon",
      "requireSSL": undefined,
    },
    Object {
      "_class": Array [
        "Database",
      ],
      "_key": "j1-gc-integration-dev-v3:us-central1:kms-example",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "backendType": "SECOND_GEN",
            "connectionName": "j1-gc-integration-dev-v3:us-central1:kms-example",
            "databaseVersion": "POSTGRES_13",
            "diskEncryptionConfiguration": Object {
              "kind": "sql#diskEncryptionConfiguration",
              "kmsKeyName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
            },
            "diskEncryptionStatus": Object {
              "kind": "sql#diskEncryptionStatus",
              "kmsKeyVersionName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key/grants/05c51c8f81987c01/cryptoKeyVersions/5",
            },
            "etag": "427e833a338e5b8630e19fa99e2b00fa28a93762697759d5529d133305001201",
            "failoverReplica": Object {
              "available": true,
            },
            "gceZone": "us-central1-b",
            "instanceType": "CLOUD_SQL_INSTANCE",
            "ipAddresses": Array [
              Object {
                "ipAddress": "34.72.243.79",
                "type": "PRIMARY",
              },
            ],
            "kind": "sql#instance",
            "name": "kms-example",
            "project": "j1-gc-integration-dev-v3",
            "region": "us-central1",
            "secondaryGceZone": "us-central1-c",
            "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/kms-example",
            "serverCaCert": Object {
              "cert": "-----BEGIN CERTIFICATE-----
MIIDfzCCAmegAwIBAgIBADANBgkqhkiG9w0BAQsFADB3MS0wKwYDVQQuEyRkMGNl
MmFkYy0yOTA0LTRhZDUtOTU5Yi1hYzMyZWNhNmMyZTUxIzAhBgNVBAMTGkdvb2ds
ZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUsIEluYzELMAkG
A1UEBhMCVVMwHhcNMjEwNjA0MTc0MjQ2WhcNMzEwNjAyMTc0MzQ2WjB3MS0wKwYD
VQQuEyRkMGNlMmFkYy0yOTA0LTRhZDUtOTU5Yi1hYzMyZWNhNmMyZTUxIzAhBgNV
BAMTGkdvb2dsZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUs
IEluYzELMAkGA1UEBhMCVVMwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIB
AQCQlGAO/5Mwy9Kp/CIsIzuDAjRlgwXc424Pk+hhfkuCi2x/zHvxvLxCuZWBHD1K
gEWFEcTWjSTwknRsVTDZ5Y2Yz+wcDY30Qq6awf7HDXGyysZBZkQleNO8K+qkYfKi
mSgC8l3WxNp4YddvxF6SRSU+AALuSnFxxGBrrXTNhO7wO4qo4zpcn6285my/zNmJ
Q1YiQgHPwBlA9A0vaL3h5HAHfq6RP+VZKf7KMhZiQZMApd4chTyuwePunCo53Acx
Z8DQN02q6FBSIJxHe+7i1lPs3fSckTt6XVxsKmaO7CwQ2d7LzdRcr1Kfd9EmriB4
+oJifCtsMLDp2MP03Y3SUKGzAgMBAAGjFjAUMBIGA1UdEwEB/wQIMAYBAf8CAQAw
DQYJKoZIhvcNAQELBQADggEBAIgNaZr+678LR+dlEszMpBloOS79VOZgDRWDae9t
e9KhCandlgQYadT4+Q7zcFv8wQ+wwDDAs8BNsJ/WuZ9o2PLppAcc2phAGi0GEnxp
NuLHOU9DX30MD5veHc1cZN1YLTXmQB59SPoU/fXbkyhZ6kb9VpmaNhYGfuDpImdf
UbU3ixxPdffEhx8krpWyxbtlmbaFXTaDBWjEjvoHP8/EHt0gVLH4IDeZMgt9yfOl
fyMSjbJxAO4/kTBC6cT+lpu7XiP72iCY9J/9Ze+98K4hmuex85G6L7LBL8YZ2MPr
ujSQnO+eMjAzyhM6qCBwOQGtqrI6XzWUmy7fsx0pAy1qnQ8=
-----END CERTIFICATE-----",
              "certSerialNumber": "0",
              "commonName": "C=US,O=Google\\\\, Inc,CN=Google Cloud SQL Server CA,dnQualifier=d0ce2adc-2904-4ad5-959b-ac32eca6c2e5",
              "createTime": "2021-06-04T17:42:46.336Z",
              "expirationTime": "2031-06-02T17:43:46.336Z",
              "instance": "kms-example",
              "kind": "sql#sslCert",
              "sha1Fingerprint": "0f688bd70b75f04db8c4e809f4025c9aade04be1",
            },
            "serviceAccountEmailAddress": "p167984947943-ez5bt8@gcp-sa-cloud-sql.iam.gserviceaccount.com",
            "settings": Object {
              "activationPolicy": "ALWAYS",
              "authorizedGaeApplications": Array [],
              "availabilityType": "REGIONAL",
              "backupConfiguration": Object {
                "backupRetentionSettings": Object {
                  "retainedBackups": 7,
                  "retentionUnit": "COUNT",
                },
                "enabled": true,
                "kind": "sql#backupConfiguration",
                "location": "us",
                "pointInTimeRecoveryEnabled": true,
                "replicationLogArchivingEnabled": true,
                "startTime": "03:00",
                "transactionLogRetentionDays": 7,
              },
              "dataDiskSizeGb": "100",
              "dataDiskType": "PD_SSD",
              "ipConfiguration": Object {
                "authorizedNetworks": Array [],
                "ipv4Enabled": true,
              },
              "kind": "sql#settings",
              "locationPreference": Object {
                "kind": "sql#locationPreference",
                "zone": "us-central1-b",
              },
              "maintenanceWindow": Object {
                "day": 0,
                "hour": 0,
                "kind": "sql#maintenanceWindow",
              },
              "pricingPlan": "PER_USE",
              "replicationType": "SYNCHRONOUS",
              "settingsVersion": "4",
              "storageAutoResize": true,
              "storageAutoResizeLimit": "0",
              "tier": "db-custom-4-26624",
            },
            "state": "RUNNABLE",
          },
        },
      ],
      "_type": "google_sql_postgres_instance",
      "authorizedNetworks": Array [],
      "automatedBackupsEnabled": true,
      "createdOn": undefined,
      "displayName": "kms-example",
      "encrypted": true,
      "hasPublicIP": true,
      "kmsKeyName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "location": "j1-gc-integration-dev-v3:us-central1:kms-example",
      "logCheckpoints": undefined,
      "logConnections": undefined,
      "logDisconnections": undefined,
      "logLockWaits": undefined,
      "logMinDurationStatement": undefined,
      "logMinErrorStatement": undefined,
      "logTempFiles": undefined,
      "name": "kms-example",
      "requireSSL": undefined,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring|has|projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring|has|projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "USES",
      "_fromEntityKey": "j1-gc-integration-dev-v3:us-central1:kms-example",
      "_key": "j1-gc-integration-dev-v3:us-central1:kms-example|uses|projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_type": "google_sql_postgres_instance_uses_kms_crypto_key",
      "displayName": "USES",
    },
  ],
  "encounteredTypes": Array [
    "google_kms_key_ring",
    "google_kms_crypto_key",
    "google_kms_key_ring_has_crypto_key",
    "google_cloud_project",
    "google_sql_postgres_instance",
    "google_sql_postgres_instance_uses_kms_crypto_key",
  ],
  "numCollectedEntities": 13,
  "numCollectedRelationships": 6,
}
`;

exports[`#fetchSQLInstances should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "projects/167984947943",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T15:15:56.125Z",
            "displayName": "j1-gc-integration-dev-v3",
            "etag": "6nNZKrLueq5A5QHM92fcDg==",
            "name": "projects/167984947943",
            "parent": "folders/306329820365",
            "projectId": "j1-gc-integration-dev-v3",
            "state": "ACTIVE",
            "updateTime": "2021-05-31T15:15:58.148Z",
          },
        },
      ],
      "_type": "google_cloud_project",
      "createdOn": 1622474156125,
      "displayName": "j1-gc-integration-dev-v3",
      "id": "j1-gc-integration-dev-v3",
      "lifecycleState": "ACTIVE",
      "name": "projects/167984947943",
      "parent": "folders/306329820365",
      "projectId": "j1-gc-integration-dev-v3",
      "updatedOn": 1622474158148,
      "webLink": "https://console.cloud.google.com/home/dashboard?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Database",
      ],
      "_key": "j1-gc-integration-dev-v3:us-central1:test-instance-delete-soon",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "backendType": "SECOND_GEN",
            "connectionName": "j1-gc-integration-dev-v3:us-central1:test-instance-delete-soon",
            "databaseVersion": "POSTGRES_13",
            "etag": "fbeba6872568e35a2bf3ae908e099edf735f4feecb41b57cb659334b3e6070fe",
            "gceZone": "us-central1-f",
            "instanceType": "CLOUD_SQL_INSTANCE",
            "ipAddresses": Array [
              Object {
                "ipAddress": "34.134.130.68",
                "type": "PRIMARY",
              },
              Object {
                "ipAddress": "34.121.255.142",
                "type": "OUTGOING",
              },
            ],
            "kind": "sql#instance",
            "name": "test-instance-delete-soon",
            "project": "j1-gc-integration-dev-v3",
            "region": "us-central1",
            "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/test-instance-delete-soon",
            "serverCaCert": Object {
              "cert": "-----BEGIN CERTIFICATE-----
MIIDfzCCAmegAwIBAgIBADANBgkqhkiG9w0BAQsFADB3MS0wKwYDVQQuEyQzNjg5
ZmEzYS0zYWMzLTRmMGMtOWJjMS0zNjFhODYzMjNmZDYxIzAhBgNVBAMTGkdvb2ds
ZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUsIEluYzELMAkG
A1UEBhMCVVMwHhcNMjEwNTMxMTY0NDI4WhcNMzEwNTI5MTY0NTI4WjB3MS0wKwYD
VQQuEyQzNjg5ZmEzYS0zYWMzLTRmMGMtOWJjMS0zNjFhODYzMjNmZDYxIzAhBgNV
BAMTGkdvb2dsZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUs
IEluYzELMAkGA1UEBhMCVVMwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIB
AQDaSFrVVfEDVLbxb33pxPhFw6BiSKP6/ejP32qZc5AlriBQX80Vh5JHNZGb2CLD
Ax/pD7sFPyp4AaSz7XD+igU/Z+mE+zYxFq2h3jWzB8OtS9MWhaIU/ZqoYHLGJRMe
aQuDQvT+2I1R8czsQNPSykwgsD74lYv21zlQVgxj8zdl22MoGN+DYgHs3e5DV2V8
JJ6t1K8JpWG+PP4fZWej5JdnKXPQ4SgYkH51g/37ZzqmkS8fUIraFVzuU+QyaSm4
cquSZvskV6cpT6sc2aXvG5Omy8rPIuA5UgzCB+JdG8QoaRpbKOfX4NS9njtVcbHJ
3UnhpRCYDIg8RV1pXIPFkokbAgMBAAGjFjAUMBIGA1UdEwEB/wQIMAYBAf8CAQAw
DQYJKoZIhvcNAQELBQADggEBADvNQYXhPBUKwA9OUOY43vbq9/lK0xBXL9H4QVgB
nqKPeYwQ1fgZEy5mYLydq/uYoJpgEexOvo8RnzkI9q+/qt9XuNz1wvBJcBWtCq9+
BGchr0u4uFHUDnAbHDIhQVffUNhzvKrkkpBvWNTWhr7jas8C+IKQmiDug2WbN8N0
Uzn5gw3TTugaU+FqZUM4DFBUkIAXApZKppdc/5A89Mg3No6k5enhPNeT4mAdGAEi
wrRRXXzpBh9Oz8wBFtiw9tk0l28zx8HSfD3jwzFKst1UXcHuMwglilrpJgfw9bP/
aCQCewmcw/urdZEKbY9HW93EGgwWF7ywAUNDEvQ3t4OqNWc=
-----END CERTIFICATE-----",
              "certSerialNumber": "0",
              "commonName": "C=US,O=Google\\\\, Inc,CN=Google Cloud SQL Server CA,dnQualifier=3689fa3a-3ac3-4f0c-9bc1-361a86323fd6",
              "createTime": "2021-05-31T16:44:28.715Z",
              "expirationTime": "2031-05-29T16:45:28.715Z",
              "instance": "test-instance-delete-soon",
              "kind": "sql#sslCert",
              "sha1Fingerprint": "ecc6c499157ef07596bba110c602490ff80c5cbb",
            },
            "serviceAccountEmailAddress": "p167984947943-wcfyii@gcp-sa-cloud-sql.iam.gserviceaccount.com",
            "settings": Object {
              "activationPolicy": "ALWAYS",
              "authorizedGaeApplications": Array [],
              "availabilityType": "ZONAL",
              "backupConfiguration": Object {
                "backupRetentionSettings": Object {
                  "retainedBackups": 7,
                  "retentionUnit": "COUNT",
                },
                "enabled": false,
                "kind": "sql#backupConfiguration",
                "location": "us",
                "pointInTimeRecoveryEnabled": false,
                "replicationLogArchivingEnabled": false,
                "startTime": "21:00",
                "transactionLogRetentionDays": 7,
              },
              "dataDiskSizeGb": "10",
              "dataDiskType": "PD_SSD",
              "ipConfiguration": Object {
                "authorizedNetworks": Array [],
                "ipv4Enabled": true,
              },
              "kind": "sql#settings",
              "locationPreference": Object {
                "kind": "sql#locationPreference",
                "zone": "us-central1-f",
              },
              "maintenanceWindow": Object {
                "day": 0,
                "hour": 0,
                "kind": "sql#maintenanceWindow",
              },
              "pricingPlan": "PER_USE",
              "replicationType": "SYNCHRONOUS",
              "settingsVersion": "1",
              "storageAutoResize": true,
              "storageAutoResizeLimit": "0",
              "tier": "db-custom-4-26624",
            },
            "state": "RUNNABLE",
          },
        },
      ],
      "_type": "google_sql_postgres_instance",
      "authorizedNetworks": Array [],
      "automatedBackupsEnabled": false,
      "createdOn": undefined,
      "displayName": "test-instance-delete-soon",
      "encrypted": true,
      "hasPublicIP": true,
      "kmsKeyName": undefined,
      "location": "j1-gc-integration-dev-v3:us-central1:test-instance-delete-soon",
      "logCheckpoints": undefined,
      "logConnections": undefined,
      "logDisconnections": undefined,
      "logLockWaits": undefined,
      "logMinDurationStatement": undefined,
      "logMinErrorStatement": undefined,
      "logTempFiles": undefined,
      "name": "test-instance-delete-soon",
      "requireSSL": undefined,
    },
  ],
  "collectedRelationships": Array [],
  "encounteredTypes": Array [
    "google_cloud_project",
    "google_sql_postgres_instance",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 0,
}
`;
